WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85350
[Qt] QQuickWebView does not allow for input from virtual keyboard
https://bugs.webkit.org/show_bug.cgi?id=85350
Summary
[Qt] QQuickWebView does not allow for input from virtual keyboard
Simon Hausmann
Reported
2012-05-02 00:51:08 PDT
[Qt] QQuickWebView does not allow for input from virtual keyboard
Attachments
Patch
(6.57 KB, patch)
2012-05-02 00:54 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
Patch
(6.59 KB, patch)
2012-05-02 01:06 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-05-02 00:52:13 PDT
As Michael analyzed correctly, the issue is that QQuickWebView never sets the ItemAcceptsInputMethod flag correctly, which leads the input method to believe that the item doesn't accept input method events at all.
Simon Hausmann
Comment 2
2012-05-02 00:54:52 PDT
Created
attachment 139761
[details]
Patch
Kenneth Rohde Christiansen
Comment 3
2012-05-02 01:03:04 PDT
Comment on
attachment 139761
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139761&action=review
> Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:1618 > +void QQuickWebView::runJavaScriptInMainFrame(const QString &script, QObject *receiver, const char *method)
I saw that BB10 Cascades added a similar method, could you verify that we are using more or less the same API for this?
Simon Hausmann
Comment 4
2012-05-02 01:06:03 PDT
Created
attachment 139763
[details]
Patch Rebased
Simon Hausmann
Comment 5
2012-05-02 01:07:59 PDT
Comment on
attachment 139761
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139761&action=review
>> Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:1618 >> +void QQuickWebView::runJavaScriptInMainFrame(const QString &script, QObject *receiver, const char *method) > > I saw that BB10 Cascades added a similar method, could you verify that we are using more or less the same API for this?
Hmm, this isn't public API though, just private for testing. I think a more JavaScript style API for this would be much better, along the lines of: webView.runJavaScript("script here", function(result) { ... })
Simon Hausmann
Comment 6
2012-05-02 01:08:24 PDT
Comment on
attachment 139763
[details]
Patch Oops, clear this. Kenneth r+'ed the earlier patch, will land rebase right away.
Simon Hausmann
Comment 7
2012-05-02 01:10:55 PDT
Committed
r115801
: <
http://trac.webkit.org/changeset/115801
>
Lauro Moura Maranhao Neto
Comment 8
2012-05-02 12:56:27 PDT
After
r115831
WebKit on N9 still has some problems regarding vkb. Here's the steps: - Go to www.google.com - Search something (vkb works fine) - On the search result page, tap the input field. - VKB does not shows, even after returning to the main page.
Simon Hausmann
Comment 9
2012-06-02 00:17:06 PDT
***
Bug 82736
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug